--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/PFE-2023-2024/MALL-SHOPPING.git/",
+  "homepage": "https://github.com/MontassarTayachi/MALL-SHOPPING.git",
   "name": "mall-shopping",
   "version": "0.1.0",
   "private": true,
