--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "mall-shopping",
+  "homepage": "https://PFE-2023-2024.github.io/MALL-SHOPPING/",
+  "name": "MALL-SHOPPING",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "mdbreact": "^5.2.0",
     "react": "^18.2.0",
@@ -25,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,5 +52,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://mall-shopping.onrender.com"
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
