--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://PFE-2023-2024.github.io/MALL-SHOPPING/",
+  "homepage": "https://PFE-2023-2024.github.io/Swiftcart/",
   "name": "MALL-SHOPPING",
   "version": "0.1.0",
   "private": true,
