--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.2",
+    "array-move": "^4.0.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "libphonenumber-js": "^1.10.56",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.1",
+    "react-sortable-hoc": "^2.0.0",
     "slick-carousel": "^1.8.1",
     "suneditor-react": "^3.6.1",
     "web-vitals": "^2.1.4"
