--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.2",
+    "antd": "^5.14.2",
     "array-move": "^4.0.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
@@ -22,6 +23,9 @@
     "mdb-react-ui-kit": "^7.2.0",
     "mdbreact": "^5.2.0",
     "mui-tel-input": "^5.1.2",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
